# IDK-demos

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
bossfight/: CMakeLists.txt  game.hpp  main.cpp
milsim/: export.cpp  game.hpp  main.cpp
src/assets/scripts/: flashlight-config.cpp  freecam-drag.cpp  freecam-look.cpp  helicopter-joystick.cpp  keyinput.cpp  mouseinput.cpp  player-crosshair.cpp  player-inventory.cpp  player-look.cpp  player-move.cpp  player-zoom.cpp  playerinput.cpp  watercraft.cpp  weapon-config.cpp  weapon-fire.cpp  weapon-sway.cpp
src/bossfight/: CMakeLists.txt  export.cpp  main.cpp
src/bossfight/enemy/: enemy.cpp  enemy.hpp
src/demo-common/: actor.cpp  actor.hpp  characterstate.cpp  characterstate.hpp  freecam.cpp  freecam.hpp  player.cpp  player.hpp
src/flightsim/: CMakeLists.txt  export.cpp  game.cpp  game.hpp  gui.cpp  gui.hpp  main.cpp  player-cmp.cpp  player-ctl.hpp  player.cpp  player.hpp
src/flightsim-common/: aircraft.cpp  aircraft.hpp  fsim.cpp  fsim.hpp  sys-aircraft.cpp  sys-aircraft.hpp  util.cpp  util.hpp  wing.hpp
src/flightsim-common/physics/: compositebody.cpp  compositebody.hpp  declarations.hpp  joint.cpp  joint.hpp  physicsworld.cpp  physicsworld.hpp  rigidbody.cpp  rigidbody.hpp
src/flightsim-editor/: CMakeLists.txt  build.cpp  export.cpp  game.hpp  main.cpp
src/flightsim/creature-old/: bodypart.cpp  bodypart.hpp  creature.cpp  creature.hpp
src/flightsim/dev-ui/: dev-ui.cpp  dev-ui.hpp
src/flightsim/game-ui/: gameui.cpp  gameui.hpp  inventory.cpp  inventory.hpp
src/flightsim/scripts/: helicopter-joystick.cpp
src/flightsim/world/aircraft/: aircraft.cpp  aircraft.hpp  airfoil.cpp  airfoil.hpp  helicopter.cpp  helicopter.hpp  plane.cpp  plane.hpp  propeller.cpp  propeller.hpp
src/flightsim/world/character/: bodypart.cpp  bodypart.hpp  creature.cpp  creature.hpp  npc.cpp  npc.hpp
src/flightsim/world/item/: pickups.cpp  pickups.hpp  tool.cpp  tool.hpp
src/flightsim/world/weapon/: ak47.cpp  ar15.cpp  flashlight.cpp  hands.cpp  rem700.cpp  sten-mk5.cpp  weapon.cpp  weapon.hpp
src/flightsim/world/world/: actor.cpp  actor.hpp  character.cpp  character.hpp  common.hpp  item.cpp  item.hpp  vehicle.cpp  vehicle.hpp  world.cpp  world.hpp
src/init/: test.cpp
src/milsim/: CMakeLists.txt  main.cpp
src/planets/: CMakeLists.txt  export.cpp  game.hpp  main.cpp
src/spacegame/: CMakeLists.txt  actor.cpp  actor.hpp  export.cpp  game.hpp  main.cpp  player.cpp  player.hpp  vehicle.cpp  vehicle.hpp  world.cpp  world.hpp
src/watercraft/: CMakeLists.txt  export.cpp  game.hpp  main.cpp  state.cpp  state.hpp  watercraft.cpp  watercraft.hpp
